# budget

./: .gitattributes  .gitmodules  Cargo.toml  README.md  Taskfile.yaml  flake.nix
src/: budget.rs  calendar.rs  config.rs  date.rs  export.rs  payment.rs  subscription.rs
