[package]
name = "budget"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/budget.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
thiserror = "1.0.59"
anyhow = "1.0.83"
ratatui = "0.26.2"
crossterm = "0.27.0"
csv = "1.3.0"
log = "0.4.21"
env_logger = "0.11.3"
